@@ -2,7 +2,7 @@
 # @configure_input@
 ## =============================================================================
 ## 
-# @(#) $RCSfile: rules.in,v $ $Name:  $($Revision: 0.9.2.26 $) $Date: 2007/03/07 11:35:43 $
+# @(#) $RCSfile: rules.in,v $ $Name:  $($Revision: 0.9.2.27 $) $Date: 2007/06/27 18:52:26 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2007/03/07 11:35:43 $ by $Author: brian $
+## Last Modified $Date: 2007/06/27 18:52:26 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -126,7 +126,7 @@ modules = streams-m2pa_sl streams-sdlm streams-sdl streams-sdl_sctp streams-sdt 
 preloads =
 libraries =
 tools = strss7_mknod test-m2pa test-q781 test-tcpc test-tcps test-udpc test-udps test-x100p test-x400p
-infofiles = $(name) libxnet tri tci mapi hlr voip tpi_tcap
+infofiles = $(name) libxnet cci tri tci mapi mtpi hlr voip tpi_tcap
 initfiles = 
 
 @WITH_KO_MODULES_TRUE@with_ko_modules = 1
@@ -473,6 +473,9 @@ get-orig-source:
 
 # =============================================================================
 # $Log: rules.in,v $
+# Revision 0.9.2.27  2007/06/27 18:52:26  brian
+# - working up documentation
+#
 # Revision 0.9.2.26  2007/03/07 11:35:43  brian
 # - make source package optional
 #
